Moved Compress from a boolean to a 3 values Enum